# MomentEmu

./: .gitignore  AUTODIFF_GUIDE.md  DOCUMENTATION_SETUP.md  LICENSE  MomentEmu.py  PACKAGE_CONFIG_SUMMARY.md  PolyCAMB.py  README.md  __init__.py  autodiff-guide.md  camb.ipynb  cobaya.ipynb  jax_momentemu.py  mkdocs.yml  planck_camb.yaml  planck_polycamb_new.yaml  planck_polycamb_old.yaml  poly_camb copy.ipynb  poly_camb.ipynb  pyproject.toml  requirements.txt  setup.py  symbolic_momentemu.py  test.ipynb  test_cp.py  theory_polycamb.py  theory_polycamb_new.py  torch_momentemu.py  visual.py
.github/workflows/: docs.yml
chains/: planck_polycamb.checkpoint  planck_polycamb.covmat  planck_polycamb.input.yaml  planck_polycamb.progress  planck_polycamb.updated.yaml
cobaya_test/: planck_camb.yaml  planck_polycamb.yaml  theory_camb.py
docs/: README.md  index.md
docs/api/: core.md  jax.md  symbolic.md  torch.md
docs/contributing/: docs-setup.md
docs/examples/: use-cases.md
docs/installation/: autodiff.md  development.md  quick-start.md
docs/theory/: mathematical-background.md
docs/tutorials/: autodiff-guide.md  getting-started.md
emulators/: PolyCAMB_peak_N7.pkl
notebooks/: poly_camb.ipynb
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/core/: index.html
site/api/jax/: index.html
site/api/symbolic/: index.html
site/api/torch/: index.html
site/contributing/docs-setup/: index.html
site/examples/use-cases/: index.html
site/installation/autodiff/: index.html
site/installation/development/: index.html
site/installation/quick-start/: index.html
site/search/: search_index.json
site/theory/mathematical-background/: index.html
site/tutorials/autodiff-guide/: index.html
site/tutorials/getting-started/: index.html
src/MomentEmu/: MomentEmu.py  PolyEmu.py  __init__.py  jax_momentemu.py  symbolic_momentemu.py  torch_momentemu.py
tests/: test_autodiff_variants.py  test_inhomo.ipynb
